-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.4, 6.5
-
None
-
4f92f018e (dev), a0c351e19 (6.4), c47ffb5d9 (tqtc/lts-6.2)
agent:2022/12/02 18:29:27 build.go:399: 42: PASS : declarative_ui::MapItemsFitViewport::test_fit_circle_to_viewport(circle 1) agent:2022/12/02 18:29:27 build.go:399: 42: qemu: uncaught target signal 11 (Segmentation fault) - core dumped
This is when running qtlocation autotests with the new Shape-based map item implementation. The ARM QEMU configurations run with QT_QPA_PLATFORM=offscreen QT_QUICK_BACKEND=software. By just setting the latter the crash is reproducable on any platform, although it will only happen from time to time.