Fix potential crash in software renderer of Shape

Consider that setNode() is only ever called when a new node is
created. If now the new node has the same address as the old one,
the state will be inconsistent. (setting the DirtyList flag is
quite important).

Fixes: QTBUG-109200
Pick-to: 6.4 6.2
Change-Id: I6136d09d917ad7c8ec13cbcdcb34bd51cb3aecfa
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>